TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fixa dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-03-04 MickeM
 * Added new dot-net API (Which does not require any strange wrappers)
 * Added brand new sample C# plugin
 * Fixed issue with python unit script loading usig the wrong default options

2012-02-21 MickeM
 * Added new module CauseCrash which has a single command CrashClient to allow the service to be crashed remotly
   *WARNING* Dont use this command, it is for debugging and testing purpouses only
 * Fixed issue with BreakPad which was disabled
 * Fixed some unix issues (sorry but hudson's stopped emailing me again:( )
 * Fixed service --install (now sets correct options)
 * Fixed service --install (now sets description correctly)
 * Fixed log level defined in protobuf (now same as rest of the system)
 * Fixed some issues with the check_nscp command

2012-02-20 MickeM
 * Fixed NRPE buffer issue
 * Added test case for 65K NRPE buffer length as well as 1Mb 
 * Added support for not regexp as operator to filters (Eventlog) (#463)
 * Added support for computer as filter keyword and format keyword in EventLog (#442)
   "filter=computer = 'foo'" syntax=%computer%
 * Improved messages rendering of eventlog messages a bit 

2012-02-19 MickeM
 * Added new unit context on command line for running simple unit test cases:
   nscp unit --language python --script test_nsca
 * Added dependency on Tcpip
 * Dropped OS bit-match requirement so now you can install any version on x64 plattform.
 * Added so you can specify multiple counters for CheckCounter and poll them all in one go (#387)
 * Added test cases (a bit flaky) for counters.
 * Added ${host} and ${domain} to hostname settings option which might be used to construct your own hostname. (#428)
   Not 100% sure about domain as on my box the "hostname" is only a name ie. has no domain...

2012-02-18 MickeM